fix margin issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,6 @@
 
 
 .activity-main {
-  background: linear-gradient(135deg, #4a8df9, #82d7ff);
   flex-grow: 1;
   overflow: hidden;
   display: flex;
@@ -134,13 +133,15 @@
 }
 
 .activity-header {
-  background-color: rgba(255, 255, 255, 0.8);
+  background: #cee0ff;
   flex-shrink: 0;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  z-index: 10;
 }
 .activity-header h2 {
   transform: translateY(6px);
@@ -156,11 +157,12 @@
 }
 
 .add-activity {
-  background: rgba(255, 255, 255, 0.9);
+  background: rgb(246, 246, 246);
+  z-index: 10;
 }
 
 .activity-list {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255);
   flex-grow: 1;
   overflow-y: auto;
 
@@ -209,5 +211,23 @@
     height: 0;
     flex-shrink: 0;
     display: none;
+  }
+
+  .stopwatch-main {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  }
+
+  .activity-main {
+    position: sticky;
+    top: 0;
+    z-index: 9;
+  }
+
+  .activity-options-container {
+    position: sticky;
+    top: 0;
+    z-index: 10;
   }
 }
